human_written_tests/WebAssembly/processed_control_flow_validation/test_if_96.wast
(assert_invalid
  (module (func $type-param-void-vs-num
    (if (param i32) (i32.const 1) (then (drop)))
  ))
  "type mismatch"
)